--- a/package.json
+++ b/package.json
@@ -7,23 +7,41 @@
   "private": true,
   "dependencies": {
     "@sap/cds": "^8",
-    "express": "^4"
+    "express": "^4",
+    "@sap/xssec": "^4",
+    "@cap-js/hana": "^1"
   },
   "devDependencies": {
+    "@cap-js/cds-types": "^0.7.0",
     "@cap-js/sqlite": "^1",
-    "@cap-js/cds-types": "^0.7.0"
+    "@sap/cds-dk": "^8"
   },
   "scripts": {
     "start": "cds-serve"
   },
   "cds": {
+    "fiori": {
+      "preview": true
+    },
+    "server": {
+      "index": true
+    },
     "requires": {
       "db": {
         "kind": "sqlite",
         "credentials": {
           "url": "db/my-bookshop.sqlite"
         }
+      },
+      "[production]": {
+        "auth": "xsuaa",
+        "db": {
+          "kind": "hana"
+        }
       }
+    },
+    "sql": {
+      "native_hana_associations": false
     }
   }
 }
